<resources>
    <string name="app_name">TIARCA</string>
    <string name="pref_header_about">About TIARCA</string>
    <string name="about_title">About TIARCA</string>
    <string name="about_body">TIARCA — TIARCA Is Another Relay Chat App\nVersion %1$s\n\nOriginal project\nTIARCA is a fork of Revolution IRC, originally developed by MrARM/MCMrARM and distributed under the GNU GPLv3.\n\nTIARCA continues its independent development with modifications, fixes and new features.\n\nLicensed under the GNU General Public License v3. The corresponding source code and notices must be made available with public distributions.\n\nIncludes open-source Android libraries; their respective licences remain in force.\n\nMedia sharing may use the external Simosnap service. Uploaded files are governed by that service’s availability and retention policies.\n\nThis product uses the TMDB API but is not endorsed or certified by TMDB.</string>
    <string name="about_revolution_github">Revolution IRC on GitHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_server">Server</string>
    <string name="message_hint">Send a message</string>
    <string name="message_join">%1$s has joined</string>
    <string name="message_kick">%1$s has kicked %2$s (%3$s)</string>
    <string name="message_part">%1$s has left (%2$s)</string>
    <string name="message_part_no_message">%1$s has left</string>
    <string name="message_quit">%1$s has disconnected (%2$s)</string>
    <string name="message_nick_change">%1$s is now known as %2$s</string>
    <string name="message_topic">Topic: %1$s</string>
    <string name="message_topic_whotime">Topic was set by %1$s on %2$s</string>
    <string name="message_topic_by">Topic: %1$s, set by %2$s</string>
    <string name="message_topic_none">Topic was not set</string>
    <string name="message_host_info">Server name is %1$s, running %2$s. Supported user modes: %3$s, supported channel modes: %4$s</string>
    <string name="message_motd">Message of the Day</string>
    <string name="message_whois">%1$s\'s user information</string>
    <string name="message_mode">%1$s %2$s</string>
    <string name="message_mode_set">set %1$s</string>
    <string name="message_mode_unset">unset %1$s</string>
    <string name="message_mode_gave">gave %1$s</string>
    <string name="message_mode_removed">removed %1$s</string>
    <string name="message_mode_gave_to">%1$s to %2$s</string>
    <string name="message_mode_removed_from">%1$s from %2$s</string>
    <plurals name="message_mode_channel">
        <item quantity="one">channel mode \'%1$s\'</item>
        <item quantity="other">channel modes \'%1$s\'</item>
    </plurals>
    <string name="message_mode_channel_value">channel mode \'%1$s\' to %2$s</string>
    <string name="message_mode_channel_ban">a ban on %1$s</string>
    <string name="message_mode_nick_owner">channel owner status</string>
    <string name="message_mode_nick_admin">channel admin status</string>
    <string name="message_mode_nick_op">channel operator status</string>
    <string name="message_mode_nick_half_op">channel half-operator status</string>
    <string name="message_mode_nick_voice">voice</string>
    <string name="message_ctcp_ping">Received a CTCP ping</string>
    <string name="message_ctcp_version">Received a CTCP version</string>
    <string name="command_error_not_found">No such command was found.</string>
    <string name="command_error_internal">An internal error occurred when trying to process the command.</string>
    <string name="command_send_raw">Send as raw</string>
    <string name="channel_topic">Topic</string>
    <string name="channel_topic_info">set by %1$s on %2$s</string>
    <string name="channel_topic_none">No topic was set</string>
    <string name="channel_members">Members</string>
    <string name="member_search_hint">Search users</string>
    <string name="member_search_clear">Clear user search</string>
    <string name="message_share_title">Share the chat messages</string>
    <string name="message_new_messages">New messages</string>
    <plurals name="unread_message_counter">
        <item quantity="one">1 unread message</item>
        <item quantity="other">%1$d unread messages</item>
    </plurals>
    <plurals name="mention_counter">
        <item quantity="one">1 mention</item>
        <item quantity="other">%1$d mentions</item>
    </plurals>
    <string name="unread_counter_with_mentions">%1$s · %2$s</string>
    <string name="unread_99_plus">99+ unread messages</string>
    <string name="action_mentions">Mentions</string>
    <string name="action_mark_read">Mark as read</string>
    <string name="action_mark_mentions_read">Mark all mentions as read</string>
    <string name="mention_previous">Previous mention</string>
    <string name="mention_next">Next mention</string>
    <string name="mention_position">Mention %1$d of %2$d</string>
    <string name="mention_none">No mentions found in this conversation</string>
    <string name="mention_unavailable">This mention is no longer available in chat history</string>
    <string name="unread_backlog_title">Unread messages</string>
    <string name="unread_go_first">Go to first unread message</string>
    <string name="unread_go_latest">Go to latest and mark as read</string>
    <plurals name="message_delete_confirm">
        <item quantity="one">Are you sure you want to delete the selected message?</item>
        <item quantity="other">Are you sure you want to delete the selected %1$d messages?</item>
    </plurals>
    <string name="message_delete_confirm_note">The messages will only be deleted on this device.</string>
    <string name="action_ok">OK</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_expand">Expand</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_open">Open</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="accessibility_send_message">Send message</string>
    <string name="accessibility_complete_nickname">Complete nickname</string>
    <string name="action_disconnect_and_close">Disconnect and close</string>
    <string name="action_servers">Manage servers</string>
    <string name="network_catalog_title">Add a server</string>
    <string name="network_catalog_manual">Add manually</string>
    <string name="network_catalog_manual_summary">Enter a custom address and connection settings</string>
    <string name="network_catalog_search_hint">Search networks</string>
    <string name="network_catalog_sort_users">Most users</string>
    <string name="network_catalog_sort_name">Name A–Z</string>
    <string name="network_catalog_approximately">approximately %1$s users · %2$s channels</string>
    <string name="network_catalog_unavailable">population unavailable</string>
    <string name="network_catalog_confirm_title">Add %1$s?</string>
    <string name="network_catalog_confirm_body">Server: %1$s\nPort: %2$d\nSecurity: %3$s\n\nThe details can be changed before saving.</string>
    <string name="network_catalog_tls">TLS enabled</string>
    <string name="network_catalog_plaintext">unencrypted connection</string>
    <string name="network_catalog_continue">Continue</string>
    <string name="network_catalog_offline_notice">Offline catalogue · population updated with the app</string>
    <string name="server_show_advanced">Advanced settings</string>
    <string name="server_hide_advanced">Hide advanced settings</string>
    <string name="action_add_below">Add below</string>
    <string name="action_add_rule">Add rule</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_undo">Undo</string>
    <string name="action_copy">Copy</string>
    <string name="action_clone">Clone</string>
    <string name="action_continue">Continue</string>
    <string name="action_finish">Finish</string>
    <string name="action_search">Search</string>
    <string name="action_search_ellipsis">Search…</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_none">Do not sort</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_join_channel">Join channel</string>
    <string name="action_message_user">Message user</string>
    <string name="action_open_private">Open private chat</string>
    <string name="action_mention_user">Mention</string>
    <string name="action_edit_monitor_user">Edit monitoring</string>
    <string name="action_part_channel">Leave channel</string>
    <string name="action_close_direct">Close conversation</string>
    <string name="close_private_conversation_confirm">Are you sure you want to close the conversation with %1$s?</string>
    <string name="action_clear_all">Clear all</string>
    <string name="search_messages_title">Search conversation</string>
    <string name="value_preset">Preset</string>
    <string name="message_format">Format</string>
    <string name="message_format_date">Time format</string>
    <string name="message_format_date_fixed_width">Fixed-width</string>
    <string name="message_format_normal">Message format</string>
    <string name="message_format_normal_mention">Message with mention format</string>
    <string name="message_format_action">Action (me) message format</string>
    <string name="message_format_action_mention">Action (me) message with mention format</string>
    <string name="message_format_notice">Notice message format</string>
    <string name="message_format_event">Event (join/leave/etc.) message format</string>
    <string name="message_format_event_hostname">Display the user hostname</string>
    <string name="message_format_preview_title">Preview</string>
    <string name="message_format_message_layout">Message layout</string>
    <string name="message_format_event_layout">Channel event layout</string>
    <string name="message_format_nickname_style">Nickname style</string>
    <string name="message_format_bold">Bold</string>
    <string name="message_format_italic">Italic</string>
    <string name="message_format_underline">Underline</string>
    <string name="message_format_advanced">Advanced format editor</string>
    <string name="message_format_avatars">Show avatars</string>
    <string name="message_format_custom_avatars">Show custom avatars, when available</string>
    <string name="notification_rule_chan_messages">Channel messages</string>
    <string name="notification_rule_direct">Private messages</string>
    <string name="notification_rule_notice">Private notices</string>
    <string name="notification_rule_chan_notice">Channel notices</string>
    <string name="title_activity_monitored_users">Monitored users</string>
    <string name="action_ignore_user">Ignore user</string>
    <string name="ignore_identify_by">Identify by</string>
    <string name="ignore_nickname">Nickname</string>
    <string name="ignore_ident">Ident</string>
    <string name="ignore_host">Host</string>
    <string name="ignore_messages">Ignore</string>
    <string name="ignore_duration">Duration</string>
    <string name="ignore_always">Always</string>
    <string name="ignore_custom_duration">Custom duration</string>
    <string name="ignore_hours">Hours</string>
    <string name="action_whois">WHOIS</string>
    <string name="channel_modes_menu">Channel modes</string>
    <string name="action_list_channels">List channels</string>
    <string name="ban_list_menu">Ban list</string>
    <string name="file_send_menu">Send</string>
</resources>